# rust-browser

./: .gitignore  ARCH_AUDIT.md  CLAUDE.md  CSS_RETROSPECTIVE.md  Cargo.toml  Ctempfails.txt  DOKUMENTACE.md  HANDOFF.md  NEXT_SESSION_PROMPT.md  README.md  RENDER_RETROSPECTIVE.md  ROADMAP.md  TODO.md  TODO_CSS.md  chrome-dump-fixed.txt  chrome-dump.txt  chrome.txt  d.txt  debug.html  debug_utils.md  devtools.html  dump.txt  flex.txt  flex2.txt  google_dump.html  grid.txt  layout-dump.txt  log.txt  mq-log.txt  run_tests.ps1  run_tests.sh  tmp_flex_extra.txt  tmp_parser_clean.txt  tmp_parser_tests.txt
.cargo/: config.toml
crates/devtools-frontend/: Cargo.toml
crates/devtools-frontend/src/: lib.rs
crates/devtools-frontend/static/: cdp.js  console.html  elements.html  index.html  network.html  performance.html  sources.html  theme.css
crates/devtools-proto/: Cargo.toml
crates/devtools-proto/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: ast.rs  debug_bp.rs  lib.rs  main.rs
crates/engine/src/browser/: a11y.rs  a11y_prefs.rs  accessibility_tree.rs  ad_blocker.rs  atlas_multipage.rs  autofill.rs  autoscroll.rs  avif_decode.rs  battery_status.rs  bf_cache.rs  bookmarks.rs  cascade.rs  charset_detect.rs  clipboard_history.rs  contenteditable_model.rs  crash_reporter.rs  devtools_panel.rs  dialog_manager.rs  display_link.rs  dom.rs  downloads.rs  drag_drop.rs  editor.rs  emoji_fonts.rs  event_dispatch.rs  experiment_flags.rs  extensions.rs  favicon.rs  floats.rs  focus_manager.rs  font_fallback.rs  forced_colors.rs  geolocation_provider.rs  hdr_color.rs  heif_decode.rs  hidpi.rs  history_db.rs  image_decoder.rs  image_decoders.rs  input_devices.rs  (+50 more)
crates/engine/src/browser/compositor/: anim.rs  mod.rs  thread.rs
crates/engine/src/browser/computed_style/: cascade_decl.rs  length.rs  mod.rs  property.rs
crates/engine/src/browser/css/: calc_resolver.rs  color_mix.rs  conditional_rules.rs  mod.rs  nesting.rs  transitions.rs
crates/engine/src/browser/html5/: browsing_context.rs  entities.rs  form_state.rs  mod.rs  template_content.rs
crates/engine/src/browser/input/: input_method_editor.rs  keyboard_events.rs  mod.rs  pointer_events.rs
crates/engine/src/browser/layout/: anchor_positioning.rs  backgrounds.rs  bfc.rs  color.rs  flex_enums.rs  gradients.rs  length.rs  mod.rs  multicol.rs  overflow.rs  positioning.rs  shadows.rs  subgrid.rs  tables.rs  transform.rs  transform_parse.rs  writing_modes.rs
crates/engine/src/browser/layout_engine/: flex.rs  flex_tests.rs  grid.rs  grid_tests.rs
crates/engine/src/browser/locale/: bcp47.rs  collation.rs  date_format.rs  mod.rs  number_format.rs  plural_rules.rs
crates/engine/src/browser/media/: av1_parse.rs  container_sniff.rs  eme.rs  h264_parse.rs  mod.rs  mse.rs  srt_parser.rs  video_decoder.rs  vtt_parser.rs  webaudio_graph.rs
crates/engine/src/browser/net/: cookie_jar.rs  dns.rs  hpack.rs  http2.rs  http2_client.rs  http_cache.rs  mod.rs  multipart.rs  qpack.rs  quic.rs  ws_frame.rs
crates/engine/src/browser/render/: atlas.rs  blend.rs  canvas_paint.rs  compositor.rs  font_face.rs  forms.rs  frame_pacing.rs  hit_test_tree.rs  mod.rs  polygon.rs  primitives.rs  segments.rs  shaders.rs  shell_chrome.rs  subpixel_aa.rs  tabs.rs  text_input.rs  tiles.rs  webgl_paint.rs
crates/engine/src/browser/security/: coep_coop.rs  cookies.rs  cors.rs  csp.rs  hsts.rs  mixed_content.rs  mod.rs  permissions_policy.rs  referrer_policy.rs  sri.rs
crates/engine/src/browser/svg/: filter.rs  gradient.rs  mod.rs  path_parser.rs  transform_parser.rs
crates/engine/src/browser/tests/: cascade_tests.rs  css_parser_tests.rs  devtools_panel_tests.rs  dom_tests.rs  emoji_fonts_tests.rs  html_parser_tests.rs  layout_tests.rs  mod.rs  paint_tests.rs  render_tests.rs  web_fixtures.rs  woff_tests.rs
crates/engine/src/debug_view/: devtools.rs  tokens_view.rs
crates/engine/src/devtools/: bookmarks.rs  debugger.rs  downloads.rs  focus.rs  history.rs  memory.rs  mod.rs  session.rs  source_map_lookup.rs
crates/engine/src/devtools/model/: console.rs  elements.rs  mod.rs  network.rs  sources.rs  styles.rs
crates/engine/src/devtools/tests/: firefox_devtools_tests.rs  search_tests.rs  sources_tests.rs
crates/engine/src/embed/: devtools_target.rs  devtools_test.rs  engine.rs  event.rs  inspect_state.rs  loader.rs  mod.rs  pointer_events.rs  process.rs  sandbox.rs  webview.rs
crates/engine/src/interpreter/: abort_signal.rs  async_runtime.rs  attribution_reporting.rs  background_fetch.rs  background_sync.rs  badging_api.rs  bignum.rs  broadcast_channel.rs  builtins.rs  builtins_helpers.rs  builtins_reflect.rs  bytecode.rs  call_machinery.rs  canvas.rs  clipboard_api.rs  compression_streams.rs  console_args.rs  contact_picker.rs  cookie_store.rs  cpu_profiler.rs  credentials_api.rs  custom_elements.rs  debugger_protocol.rs  decorators.rs  device_apis.rs  document_pip.rs  dom_props.rs  encoding.rs  error_kinds.rs  eval_call.rs  eval_expr.rs  eval_member.rs  eventsource_state.rs  exec_stmt.rs  federated_credential.rs  fenced_frames.rs  fetch_api.rs  file_blob.rs  file_system_access.rs  form_data.rs  (+64 more)
crates/engine/src/interpreter/tests/: batch_h_extras.rs  batch_k_modern.rs  batch_m_meta.rs  batch_o_regex.rs  batch_p_web.rs  batch_q_storage.rs  batch_s_dom.rs  bigint_tests.rs  bignumber_tests.rs  bytecode_bench.rs  bytecode_tests.rs  cache_api_tests.rs  canvas_form_tests.rs  control_flow.rs  dom_api_tests.rs  dom_tier1_tests.rs  dom_tier2_tests.rs  dom_tier3_tests.rs  dom_tier4_tests.rs  dom_tier5_tests.rs  functions_closures.rs  misc.rs  mod.rs  number_math_date_tests.rs  objects.rs  promise_extra_tests.rs  regex_tests.rs  strings.rs  webgl_tests.rs
crates/engine/src/lexer/: base.rs  debug.rs  mod.rs  numeric.rs  regex.rs  string.rs
crates/engine/src/parser/: mod.rs
crates/engine/src/specifications/: mod.rs  number_literal.rs
crates/engine/src/testing/: mod.rs  reftest.rs  test262.rs  wpt.rs
crates/engine/tests/fixtures/: LICENSE_TAFFY.md
crates/shell/: Cargo.toml
crates/shell/src/: app.rs  lib.rs  main.rs
(+314 files in other folders)
