[package]
name = "RustWebEngine"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = true  # Generování debug symbolů
opt-level = 1 # Mirne opt - nas kod malo deeper, ale frames v debug bezi 5-10x rychleji.
# Build cargo nepatrne pomalejsi (~5%), ale render frame v debug 30 FPS misto 5 FPS.

# Dependencies vzdy s opt-level 3 - jsou debug-only nepouzitelne (wgpu/icu/image/...)
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# Cross-platform clipboard read/write (Ctrl+C, Ctrl+V).
arboard = "3.6"
# PDF generation pro print/export.
printpdf = "0.7"
unicode-general-category = "1.0.0"
unicode-ident = "1.0.18"
num-bigint = "0.4.6"
num-traits = "0.2"
regex = "1"
bigdecimal = "0.4"

# Real Intl pres ICU4X (compiled_data = locale data baked at compile time)
icu = { version = "1.5", features = ["compiled_data"] }
fixed_decimal = "0.5"
writeable = "0.5"

# Real HTTP client pro fetch() - blocking varianta (sync runtime)
ureq = { version = "2.12", features = ["json"] }

# Fancy regex - podporuje lookbehind, backreferences, atomic groups
fancy-regex = "0.18"

# HTML5 parser - same crate Servo pouziva
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# CSS parser
selectors = "0.38"
cssparser = "0.37"

# Rendering: wgpu - cross-platform GPU API (wraps Vulkan/Metal/DX12/WebGPU)
wgpu = "29"
# naga - GLSL frontend + WGSL backend pro WebGL shader transpilaci.
naga = { version = "29", features = ["glsl-in", "wgsl-out"] }
winit = "0.30"
pollster = "0.4"  # block_on bez tokio
bytemuck = { version = "1.25", features = ["derive"] }  # vertex bytes
stacker = "0.1"  # auto-grow stack pri hluboke rekurzi (DOM walk, layout, paint)
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }  # sync WebSocket pro ws://; tls-feature pridat pro wss://

# Test-only - JSON parser pro web layout fixtures (Chrome export -> Rust compare).
# Naive parser ne na 60kb+ JSON -> serde stack-safe iterativni parse.
serde_json = "1"
fontdue = "0.9"  # font rasterizer pro glyph atlas
# taffy odstraneno - vlastni layout_engine v src/browser/layout_engine/
# (inspirovano taffy MIT licence; mame plnou kontrolu nad layoutem)
# Image formaty: pure-Rust co image crate nabizi.
# AVIF DEKODER vyzaduje "avif-native" feature ktery linkuje C dav1d (NASM build).
# To je out-of-scope pro pure-Rust projekt. AVIF DECODE je TODO (separate crate
# nebo system dav1d).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "ico", "tga", "exr", "qoi", "ff", "hdr", "pnm", "dds"] }
# SVG -> raster decoder (pure Rust). Pouzity v load_image_as kdyz `image`
# crate selhe a obsah vypada jako SVG (XML s <svg root). Real-world stranky
# (google logo, github icons, ...) maji SVG ikony co bez tohohle nedaji
# decodnout -> tombstone -> chybi v atlasu.
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
usvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
tiny-skia = "0.11"
# WOFF dekomprese (zlib stream per table). Pure-Rust deflate. WOFF2 (brotli + transformations) zatim TODO.
flate2 = "1.0"
# WOFF2 brotli decompressor (pure Rust). Glyf transform reverse zatim TODO.
brotli = { version = "8.0", default-features = false, features = ["std"] }
