[workspace]
members = ["crates/engine", "crates/shell"]
resolver = "2"

# Profile settings se aplikuji na vsechny workspace members.
# V member Cargo.toml jsou [profile.*] sections ignorovany (cargo warning).
[profile.dev]
debug = true
opt-level = 1 # Mirne opt - nas kod malo deeper, ale frames v debug bezi 5-10x rychleji.

# Dependencies vzdy s opt-level 3 - jsou debug-only nepouzitelne (wgpu/icu/image/...)
[profile.dev.package."*"]
opt-level = 3
