[package]
name = "rwe-devtools-proto"
version = "0.1.0"
edition = "2024"

[lib]
name = "rwe_devtools_proto"
path = "src/lib.rs"

[dependencies]
# Serde JSON serializace - Chrome DevTools Protocol style (method/params/result).
# Pres mpsc channel mezi devtools frontendem (WebView) a engine target adapterem.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
