[package]
name = "rwe-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "rwe_engine"
path = "src/lib.rs"

[[bin]]
name = "rwe-engine"
path = "src/main.rs"

[dependencies]
# Cross-platform clipboard read/write (Ctrl+C, Ctrl+V).
arboard = "3.6"
# PDF generation pro print/export.
printpdf = "0.7"
unicode-general-category = "1.0.0"
unicode-ident = "1.0.18"
num-bigint = "0.4.6"
num-traits = "0.2"
regex = "1"
bigdecimal = "0.4"

# Real Intl pres ICU4X (compiled_data = locale data baked at compile time)
icu = { version = "1.5", features = ["compiled_data"] }
fixed_decimal = "0.5"
writeable = "0.5"

# Real HTTP client pro fetch() - blocking varianta (sync runtime).
# ureq 2.x = HTTP/1.1 only. HTTP/2 pres h2 crate (low-level) + tokio runtime,
# wired v browser::net::http2_client.
ureq = { version = "2.12", features = ["json"] }
# HTTP/2 low-level client - pure Rust (hyper.rs project).
h2 = "0.4"
# tokio async runtime pro h2 (mali scope: rt + io + time).
tokio = { version = "1", features = ["rt", "io-util", "net", "macros", "time"] }
# Rustls pure-Rust TLS + webpki-roots Mozilla CA bundle.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
# URL parser + http types - pure Rust, used by http2_client.
url = "2.5"
http = "1.1"

# Fancy regex - podporuje lookbehind, backreferences, atomic groups
fancy-regex = "0.18"

# HTML5 parser - same crate Servo pouziva
html5ever = "0.27"
markup5ever_rcdom = "0.3"

# CSS parser
selectors = "0.38"
cssparser = "0.37"

# Rendering: wgpu - cross-platform GPU API (wraps Vulkan/Metal/DX12/WebGPU)
wgpu = "29"
# naga - GLSL frontend + WGSL backend pro WebGL shader transpilaci.
naga = { version = "29", features = ["glsl-in", "wgsl-out"] }
winit = "0.30"
pollster = "0.4"  # block_on bez tokio
bytemuck = { version = "1.25", features = ["derive"] }  # vertex bytes
stacker = "0.1"  # auto-grow stack pri hluboke rekurzi (DOM walk, layout, paint)
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }  # sync WebSocket pro ws://; tls-feature pridat pro wss://

# Test-only - JSON parser pro web layout fixtures (Chrome export -> Rust compare).
# Naive parser ne na 60kb+ JSON -> serde stack-safe iterativni parse.
serde_json = "1"
# Serde derive pro devtools target adapter (Serialize trait bounds).
serde = { version = "1", features = ["derive"] }
fontdue = "0.9"  # font rasterizer (transitional, vymenovan za swash)
# swash = full TTF hinting interpreter + subpixel rendering (= Chrome quality).
# fontdue NEMA hinting -> blurry na 11-12px UI text. Swash hinted text na low-DPI
# ostry. `scale` feature = glyph rasterizer, `render` = format selection.
swash = { version = "0.2", default-features = false, features = ["scale", "render", "std"] }
# taffy odstraneno - vlastni layout_engine v src/browser/layout_engine/
# (inspirovano taffy MIT licence; mame plnou kontrolu nad layoutem)
# Image formaty: pure-Rust co image crate nabizi.
# AVIF zamerne BEZ `avif-native` feature (= libdav1d C deps). AVIF resime
# separatne pres `zenavif` crate (pure-Rust port dav1d + ISO BMFF parser),
# aby browser nepotreboval system install ze strany user.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "ico", "tga", "exr", "qoi", "ff", "hdr", "pnm", "dds"] }
# Pure-Rust AVIF dekoder. Pouziva rav1d (pure-Rust port dav1d od Memory Safety
# Initiative). Bez system deps, bez NASM, bez dav1d C lib. Browser sam dekoduje.
zenavif = "0.1"
# zenpixels-convert pro PixelBuffer::to_rgba8() trait. Pure-Rust.
zenpixels-convert = { version = "0.2", default-features = false, features = ["rgb"] }
zenpixels = "0.2"
# JPEG XL decode - pure Rust (jxl-oxide). Browser sam dekoduje.
jxl-oxide = "0.12"
# HEIF/HEIC decode - pure Rust (heic crate s HEVC SIMD). Browser sam dekoduje.
heic = "0.1"
# MP4 demux - pure Rust. Pouzity v media::mp4_demux pro <video>.
re_mp4 = "0.5"
# WebM/Matroska demux - pure Rust EBML iterator.
webm-iterable = "0.6"
# WebAssembly interpreter - pure Rust. Pouzity v interpreter::wasm pro
# real WebAssembly.instantiate() + Module/Instance/Memory.
wasmi = "0.36"
# SVG -> raster decoder (pure Rust). Pouzity v load_image_as kdyz `image`
# crate selhe a obsah vypada jako SVG (XML s <svg root). Real-world stranky
# (google logo, github icons, ...) maji SVG ikony co bez tohohle nedaji
# decodnout -> tombstone -> chybi v atlasu.
resvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
usvg = { version = "0.45", default-features = false, features = ["text", "system-fonts"] }
tiny-skia = "0.11"
# WOFF dekomprese (zlib stream per table). Pure-Rust deflate. WOFF2 (brotli + transformations) zatim TODO.
flate2 = "1.0"
# WOFF2 brotli decompressor (pure Rust). Glyf transform reverse zatim TODO.
brotli = { version = "8.0", default-features = false, features = ["std"] }
# AHash - fast non-cryptographic hasher pro hot paths (cascade hash, layout
# subtree hash, atlas lookup keys). Pure Rust, SipHash13 nahrazeny ~10x rychleji.
ahash = { version = "0.8", default-features = false, features = ["std"] }
# DevTools protokol crate - DevtoolsRequest/Response/Event typy + Method enum.
# Pres `embed::devtools_target` adapter mapuje method strings na WebView API
# (DOM/CSS/Runtime/Debugger/Network/Performance domains).
rwe-devtools-proto = { path = "../devtools-proto" }
# R-tree spatial index pro hit_test - O(log N) misto O(N) tree walk per
# mouse move. Pri 5000-box page + 1000Hz mysi dropoval FPS o 100.
rstar = "0.12"

# Bez Cargo features - AVIF je default-on pres pure-Rust `zenavif` (rav1d).
